--- a/index.html
+++ b/index.html
@@ -75,28 +75,20 @@ The primary design goal was to make the technology disappear completely; the fin
 Cavities were routed out for the NFC tag and magnets (they sit 3/16" below the outer surface).  Magnets were glued in.
 <img src="https://www.dropbox.com/s/ivab56cmj4c9a6c/factory.JPG?dl=1" alt="Adding NFC tags and gluing in the magnets">
 The halves were then glued and clamped
-<img src="https://www.dropbox.com/s/ullvmcmbyeu25km/press.JPG?dl=1" alt="Clamping"></p>
+<img src="https://www.dropbox.com/s/ullvmcmbyeu25km/press.JPG?dl=1" alt="Clamping">
+Each side was evened out by trimming off a very thin slice with a band saw.  The edges were given a 1/8" radius round-over with a router.  The sides and edges were sanded with 120 grit. Before and after the trimming, radiusing, and sanding:
+<img src="https://www.dropbox.com/s/ufv3jjwsialenos/squareround.JPG?dl=1" alt="Before &amp; After"><img src="https://www.dropbox.com/s/y5lrcd2twwp79yn/squareround2.JPG?dl=1" alt="Before &amp; After 2"></p>
 
-<ul>
-<li>Each side was evened out by trimming off a very thin slice with a band saw</li>
-<li>The edges were given a 1/8" radius round-over with a router</li>
-<li>The sides and edges were sanded with 120 grit. Before and after the trimming, radiusing, and sanding:
-<img src="https://www.dropbox.com/s/ufv3jjwsialenos/squareround.JPG?dl=1" alt="Before &amp; After"><img src="https://www.dropbox.com/s/y5lrcd2twwp79yn/squareround2.JPG?dl=1" alt="Before &amp; After 2">
-</li>
-</ul><hr><ul>
-<li>The numbers were imprinted with an ink stamp set and then burned in with a soldering iron
+<hr><p>The numbers were imprinted with an ink stamp set and then burned in with a soldering iron
 <img src="https://www.dropbox.com/s/z3jzznzlrof9oyq/burn.JPG?dl=1" alt="Burn">
-</li>
-<li>The wood has been left natural - no oil, sealant, etc.</li>
-</ul><h3>
+The wood has been left natural - no oil, sealant, etc.</p>
+
+<h3>
 <a name="the-drawer" class="anchor" href="#the-drawer"><span class="octicon octicon-link"></span></a>The drawer</h3>
 
-<ul>
-<li>Cavities were routed out from the inside of the drawer face to place the magnets (they sit 3/16" below the outer surface)</li>
-<li>The NFC controller board is taped to the inside of the drawer face</li>
-<li>The Raspberry Pi just sits in the drawer, with its power cord running out the back</li>
-<li>The wires between the NFC controller and the Raspberry Pi connect UART Rx, Tx, +5v, and ground </li>
-</ul><h3>
+<p>Cavities were routed out from the inside of the drawer face to place the magnets (they sit 3/16" below the outer surface).  The NFC controller board is taped to the inside of the drawer face.  The Raspberry Pi just sits in the drawer, with its power cord running out the back.  The wires between the NFC controller and the Raspberry Pi connect UART Rx, Tx, +5v, and ground </p>
+
+<h3>
 <a name="the-code" class="anchor" href="#the-code"><span class="octicon octicon-link"></span></a>The code</h3>
 
 <p>I haven't coded in over a decade and this is my first Python project.  So its ugly, but functional and pretty self-explanatory. The GitHub repo is <a href="https://github.com/shawnrk/songblocks">here</a>.</p>
