--- a/index.html
+++ b/index.html
@@ -51,7 +51,9 @@
 
 <p>I built Song Blocks so my toddler could play music on the living room Sonos by himself without <em>apparently</em> interacting with technology.</p>
 
-<p>The primary design goal was to make the technology disappear completely; the final experience is organic, tactile and aural - and quite magical.  Each block contains an NFC tag that maps to a song.  The blocks magnetically align and pull themselves to the drawer face, snapping on with a satisfying <em>clack!</em>.  Music fills the room until the block is prised away. <a href="https://twitter.com/songblocks">@songblocks</a> silently records my son's listening history.  It will be interesting to graph this data to see how his preferences change over time.  </p>
+<p>I made 12 wood blocks, each containing two magnets and an NFC tag that is mapped to a song.   With a satisfying <em>clack!</em> the blocks magnetically attach to the face of a drawer containing a Raspberry Pi computer and an NFC controller.  The Pi reads the tag, tells the Sonos which song to play, and tweets the song title at <a href="https://twitter.com/songblocks">@songblocks</a>.</p>
+
+<p>The primary design goal was to make the technology disappear completely; the final experience is organic, tactile and aural - and quite magical.  My son loves it.</p>
 
 <p><img src="https://www.dropbox.com/s/2nmt56de2d6rmzk/sonos.JPG?dl=1" alt="Sonos"><br><img src="https://www.dropbox.com/s/thajeqv8gg4pt9g/drawer.JPG?dl=1" alt="drawer"><br><img src="https://www.dropbox.com/s/7ny63nauakkqr4p/blocks.JPG?dl=1" alt="Blocks"></p>
 
