--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 
 <p><img src="https://www.dropbox.com/s/ivab56cmj4c9a6c/factory.JPG?dl=1" alt="Adding NFC tags and gluing in the magnets"><img src="https://www.dropbox.com/s/ullvmcmbyeu25km/press.JPG?dl=1" alt="Clamping"></p>
 
-<p>Each side was evened out by trimming off a very thin slice with a band saw.  The edges were given a 1/8" radius round-over with a router.  The sides and edges were sanded with 150 grit sandpaper. The seam between the halves was rendered nearly indiscernible.
+<p>Each side was evened out by trimming off a very thin slice with a band saw.  The edges were given a 1/8" radius round-over with a router.  The sides and edges were sanded with 150 grit sandpaper. The seam between the halves was rendered nearly indiscernible.<br>
 Before and after the trimming, radiusing, and sanding:  </p>
 
 <p><img src="https://www.dropbox.com/s/ufv3jjwsialenos/squareround.JPG?dl=1" alt="Before &amp; After"><img src="https://www.dropbox.com/s/y5lrcd2twwp79yn/squareround2.JPG?dl=1" alt="Before &amp; After 2"></p>
