--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 
 <p>The primary design goal was to make the technology disappear completely; the final experience is organic, tactile and aural - and quite magical.  My son loves it.</p>
 
-<p><img src="https://www.dropbox.com/s/2nmt56de2d6rmzk/sonos.JPG?dl=1" alt="Sonos"><br><img src="https://www.dropbox.com/s/thajeqv8gg4pt9g/drawer.JPG?dl=1" alt="drawer"><br><img src="https://www.dropbox.com/s/7ny63nauakkqr4p/blocks.JPG?dl=1" alt="Blocks"></p>
+<p><img src="https://www.dropbox.com/s/2nmt56de2d6rmzk/sonos.JPG?dl=1" alt="Sonos"><br><img src="https://www.dropbox.com/s/thajeqv8gg4pt9g/drawer.JPG?dl=1" alt="drawer"></p>
 
 <h3>
 <a name="technologies-used" class="anchor" href="#technologies-used"><span class="octicon octicon-link"></span></a>Technologies Used</h3>
@@ -69,6 +69,13 @@
 </li>
 <li>Open-source Python libs: <a href="https://github.com/SoCo/SoCo">SoCo</a> to talk to the Sonos, <a href="https://launchpad.net/nfcpy">nfcpy</a> to talk to the NFC controller, <a href="https://github.com/Mezgrman/TweetPony">TweetPony</a> to talk to Twitter</li>
 </ul><h3>
+<a name="the-drawer" class="anchor" href="#the-drawer"><span class="octicon octicon-link"></span></a>The drawer</h3>
+
+<p>Cavities were routed out from the inside of the drawer face to place the magnets (they sit 3/16" below the outer surface).  The NFC controller board is taped to the inside of the drawer face.  The Raspberry Pi just sits in the drawer, with its power cord running out the back.  The four wires between the NFC controller and the Raspberry Pi connect UART Rx, Tx, +5v, and ground.  </p>
+
+<p><img src="https://www.dropbox.com/s/thsis3mgbukt754/inside.jpg?dl=1" alt="inside"></p>
+
+<h3>
 <a name="the-blocks" class="anchor" href="#the-blocks"><span class="octicon octicon-link"></span></a>The blocks</h3>
 
 <p>3/8" thick walnut boards were cut down to pieces measuring 1-1/2"x3-1/4" (two of these form each block).  Cavities were routed out for the NFC tag and magnets (they sit 3/16" below the outer surface).  Magnets were glued in.  The halves were then glued together and clamped.  </p>
@@ -84,14 +91,9 @@ Before and after the trimming, radiusing, and sanding:  </p>
 
 <p><img src="https://www.dropbox.com/s/z3jzznzlrof9oyq/burn.JPG?dl=1" alt="Burn"></p>
 
-<hr><p>The wood has been left natural - no oil or stain.  Naked walnut is beautiful, wears well, and smells nice.</p>
+<hr><p>The wood has been left natural - no oil or stain.  Naked walnut is beautiful, wears well, and smells nice.  </p>
 
-<h3>
-<a name="the-drawer" class="anchor" href="#the-drawer"><span class="octicon octicon-link"></span></a>The drawer</h3>
-
-<p>Cavities were routed out from the inside of the drawer face to place the magnets (they sit 3/16" below the outer surface).  The NFC controller board is taped to the inside of the drawer face.  The Raspberry Pi just sits in the drawer, with its power cord running out the back.  The four wires between the NFC controller and the Raspberry Pi connect UART Rx, Tx, +5v, and ground.  </p>
-
-<p><img src="https://www.dropbox.com/s/thsis3mgbukt754/inside.jpg?dl=1" alt="inside"></p>
+<p><img src="https://www.dropbox.com/s/7ny63nauakkqr4p/blocks.JPG?dl=1" alt="Blocks"></p>
 
 <h3>
 <a name="the-code" class="anchor" href="#the-code"><span class="octicon octicon-link"></span></a>The code</h3>
